; ModuleID = '/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_space_map.c_space_map_write_intro_debug.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/cddl/contrib/opensolaris/uts/common/fs/zfs/extr_space_map.c_space_map_write_intro_debug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_13__ = type { %struct.TYPE_11__*, i32, i32 }
%struct.TYPE_11__ = type { i32 }
%struct.TYPE_14__ = type { %struct.TYPE_12__* }
%struct.TYPE_12__ = type { i32 }

@SM_DEBUG_PREFIX = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_13__*, i32, %struct.TYPE_14__*)* @space_map_write_intro_debug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @space_map_write_intro_debug(%struct.TYPE_13__* %0, i32 %1, %struct.TYPE_14__* %2) #0 {
  %4 = alloca %struct.TYPE_13__*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.TYPE_14__*, align 8
  %7 = alloca i32, align 4
  store %struct.TYPE_13__* %0, %struct.TYPE_13__** %4, align 8
  store i32 %1, i32* %5, align 4
  store %struct.TYPE_14__* %2, %struct.TYPE_14__** %6, align 8
  %8 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %8, i32 0, i32 2
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.TYPE_14__*, %struct.TYPE_14__** %6, align 8
  %12 = call i32 @dmu_buf_will_dirty(i32 %10, %struct.TYPE_14__* %11)
  %13 = load i32, i32* @SM_DEBUG_PREFIX, align 4
  %14 = call i32 @SM_PREFIX_ENCODE(i32 %13)
  %15 = load i32, i32* %5, align 4
  %16 = call i32 @SM_DEBUG_ACTION_ENCODE(i32 %15)
  %17 = or i32 %14, %16
  %18 = load %struct.TYPE_14__*, %struct.TYPE_14__** %6, align 8
  %19 = getelementptr inbounds %struct.TYPE_14__, %struct.TYPE_14__* %18, i32 0, i32 0
  %20 = load %struct.TYPE_12__*, %struct.TYPE_12__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @spa_sync_pass(i32 %22)
  %24 = call i32 @SM_DEBUG_SYNCPASS_ENCODE(i32 %23)
  %25 = or i32 %17, %24
  %26 = load %struct.TYPE_14__*, %struct.TYPE_14__** %6, align 8
  %27 = call i32 @dmu_tx_get_txg(%struct.TYPE_14__* %26)
  %28 = call i32 @SM_DEBUG_TXG_ENCODE(i32 %27)
  %29 = or i32 %25, %28
  store i32 %29, i32* %7, align 4
  %30 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %31 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %30, i32 0, i32 1
  %32 = load i32, i32* %31, align 8
  %33 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %34 = call i32 @space_map_object(%struct.TYPE_13__* %33)
  %35 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %36 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %35, i32 0, i32 0
  %37 = load %struct.TYPE_11__*, %struct.TYPE_11__** %36, align 8
  %38 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 4
  %40 = load %struct.TYPE_14__*, %struct.TYPE_14__** %6, align 8
  %41 = call i32 @dmu_write(i32 %32, i32 %34, i32 %39, i32 4, i32* %7, %struct.TYPE_14__* %40)
  %42 = load %struct.TYPE_13__*, %struct.TYPE_13__** %4, align 8
  %43 = getelementptr inbounds %struct.TYPE_13__, %struct.TYPE_13__* %42, i32 0, i32 0
  %44 = load %struct.TYPE_11__*, %struct.TYPE_11__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %44, i32 0, i32 0
  %46 = load i32, i32* %45, align 4
  %47 = sext i32 %46 to i64
  %48 = add i64 %47, 4
  %49 = trunc i64 %48 to i32
  store i32 %49, i32* %45, align 4
  ret void
}

declare dso_local i32 @dmu_buf_will_dirty(i32, %struct.TYPE_14__*) #1

declare dso_local i32 @SM_PREFIX_ENCODE(i32) #1

declare dso_local i32 @SM_DEBUG_ACTION_ENCODE(i32) #1

declare dso_local i32 @SM_DEBUG_SYNCPASS_ENCODE(i32) #1

declare dso_local i32 @spa_sync_pass(i32) #1

declare dso_local i32 @SM_DEBUG_TXG_ENCODE(i32) #1

declare dso_local i32 @dmu_tx_get_txg(%struct.TYPE_14__*) #1

declare dso_local i32 @dmu_write(i32, i32, i32, i32, i32*, %struct.TYPE_14__*) #1

declare dso_local i32 @space_map_object(%struct.TYPE_13__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
